# ComputerGrafik-Labor---Raytracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color.h  geometry.h  geometry.tcc  geometry_test  geometry_test.cc  math.h  math.tcc  math_test  math_test.cc  raytracer  raytracer.cc
